force-app/main/default/objects/Suggestion__c/fields/Description_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Description_Rich_Text__c</fullName>
    <label>Description Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>