force-app/main/default/objects/Suggestion__c/fields/SuggestedDateAndTime__c.field-meta.xml
<CustomField>
    <fullName>SuggestedDateAndTime__c</fullName>
    <label>Suggested Date and Time</label>
    <type>DateTime</type>
</CustomField>