force-app/main/default/objects/Suggestion__c/fields/UserAction__c.field-meta.xml
<CustomField>
    <fullName>UserAction__c</fullName>
    <label>User Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
            <value>
                <fullName>Mark as Done</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>